fix: Dark mode

--- a/index.css
+++ b/index.css
@@ -10,7 +10,15 @@
         @apply m-0;
     }
 
-    button {
-        @apply bg-gray-200 dark:bg-neutral-600 rounded p-2;
+    button, input[type="submit"] {
+        @apply bg-gray-200 dark:bg-neutral-600 dark:text-white border border-neutral-500 rounded p-2;
+    }
+
+    input:not([type="submit"]) {
+        @apply dark:bg-neutral-600 dark:text-white rounded p-2 border border-neutral-500;
+    }
+
+    a {
+        @apply text-blue-800 dark:text-blue-200;
     }
 }
